Added some font styles

--- a/Pagina di presentazione.html
+++ b/Pagina di presentazione.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div>
     <h1>Pagina di presentazione</h1>
-    <p>Mi chiamo <span style="font-weight: bold;">Sarkhan Abdurrahman</span>. Ho 34 anni e sono nato a Baku, in Azerbaigian. 
+    <div class="introduction">
+        <p>Mi chiamo <span style="font-weight: bold;">Sarkhan Abdurrahman</span>. Ho 34 anni e sono nato a Baku, in Azerbaigian. 
         Mi sono trasferito in italia nel 2014. Nel mio paese mi sono laureato in Business Management. 
         Grazie al titolo di studio magistrale conseguito in Business Administration
         (MBA), nonché ai piu di due anni di esperienza maturati
@@ -91,7 +91,7 @@
             </tbody>
         </table>
         <br>
-        <div>
+        <div class="contacts">
         <h3>Contatti</h3>
         <ul>
             <li>Email: sarkhan.abdurrahman@gmail.com</li>
@@ -99,7 +99,7 @@
             <li>
                 <a href="www.linkedin.com/in/sarkhan-abdurrahman">Linkedin
                 <img src="https://static.vecteezy.com/system/resources/previews/018/930/587/original/linkedin-logo-linkedin-icon-transparent-free-png.png" 
-                alt="Logo Linkedin" style="width: 50px;"></a>
+                alt="Logo Linkedin" style="width: 30px;"></a>
             </li>
         </ul>
         </div>
