Fixed the glitch

--- a/Pagina di presentazione.html
+++ b/Pagina di presentazione.html
@@ -97,7 +97,7 @@
             <li>Email: sarkhan.abdurrahman@gmail.com</li>
             <li>Numero di telefono: +39 3285395406</li>
             <li>
-                <a href="www.linkedin.com/in/sarkhan-abdurrahman">Linkedin
+                <a href="https://www.linkedin.com/in/sarkhan-abdurrahman">Linkedin
                 <img src="https://static.vecteezy.com/system/resources/previews/018/930/587/original/linkedin-logo-linkedin-icon-transparent-free-png.png" 
                 alt="Logo Linkedin" style="width: 30px;"></a>
             </li>
