Aligning image with text

--- a/Pagina di presentazione.html
+++ b/Pagina di presentazione.html
@@ -94,12 +94,12 @@
         <div class="contacts">
         <h3>Contatti</h3>
         <ul>
-            <li>Email: sarkhan.abdurrahman@gmail.com</li>
-            <li>Numero di telefono: +39 3285395406</li>
-            <li>
+            <li id="first">Email: sarkhan.abdurrahman@gmail.com</li>
+            <li id="second">Numero di telefono: +39 3285395406</li>
+            <li id="third">
                 <a href="https://www.linkedin.com/in/sarkhan-abdurrahman">Linkedin
                 <img src="https://static.vecteezy.com/system/resources/previews/018/930/587/original/linkedin-logo-linkedin-icon-transparent-free-png.png" 
-                alt="Logo Linkedin" style="width: 30px;"></a>
+                alt="Logo Linkedin" style="width: 30px; vertical-align: middle;"></a>
             </li>
         </ul>
         </div>
