--- a/Pagina di presentazione.html
+++ b/Pagina di presentazione.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina di presentazione</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="normalize.css">
 </head>
 <body>
     <h1>Pagina di presentazione</h1>
